@@ -1,3 +1,8 @@
+2007-04-01 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCC.lex, sdc/SDCCmain.c, support/cpp2/sdcpp.c:
+	  fixed bug #1692042: input buffer overflow...scanner uses REJECT
+
 2007-03-30 Raphael Neider <rneider AT web.de>
 
 	* src/pic/ralloc.c (isData): suppress garbage debug output
